# mehditor

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
mehditor/: app_commands.py  config.py  main.py  validators.py
mehditor/screens/: about.py  app_menu.py  chooser.py  confirm_dialog.py  file_chooser.py  file_open.py  file_save.py  file_settings.py  hotkeys.py  input_prompt.py  mehditor_app.py  quit_screen.py  shortcuts.py
mehditor/widgets/: better_text_area.py
tests/: test_validators.py
