[tool.poetry]
name = "mehditor"
version = "0.1.5"
description = "A text editor for twentieth century computing."
authors = ["Ken Kinder <ken+github@kkinder.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = {extras = ["syntax"], version = "^0.52.1"}

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meh = "mehditor.main:main"
mehditor = "mehditor.main:main"
