[tool.poetry]
name = "mehditor"
version = "0.2.0"
description = "A text editor for twentieth century computing."
authors = ["Ken Kinder <ken+github@kkinder.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = {extras = ["syntax"], version = "^0.58.0"}

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meh = "mehditor.main:main"
mehditor = "mehditor.main:main"
